cluster/apps/database/redis/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: baseline
